--- a/kernel_debug/tracing/ftrace/trccmd.config
+++ b/kernel_debug/tracing/ftrace/trccmd.config
@@ -1,4 +1,5 @@
-# config.trccmd
+# trccmd.config
+# location to store it: ~/.local/trccmd.config
 #--- Configs for the trccmd convenience script
 # https://github.com/kaiwan/L5_debug_trg/blob/master/kernel_debug/tracing/ftrace/trccmd
 TRC_FILE=/tmp/trc.txt
