--- a/kernel_debug/k_oops_warn_panic/oops2/Makefile
+++ b/kernel_debug/k_oops_warn_panic/oops2/Makefile
@@ -23,7 +23,7 @@ ifeq ($(ARCH),arm)
 else ifeq ($(ARCH),arm64)
   # *UPDATE* 'KDIR' below to point to the ARM64 (Aarch64) Linux kernel source
   # tree on your box
-  KDIR ?= ~/kernel/linux-4.14
+  KDIR ?= ~/rpi_work/kernel_rpi/linux
 else ifeq ($(ARCH),powerpc)
   # *UPDATE* 'KDIR' below to point to the PPC64 Linux kernel source tree on your box
   KDIR ?= ~/kernel/linux-4.9.1
