--- a/kernel_debug/k_oops_warn_panic/lab_oops_hang_panic/Makefile
+++ b/kernel_debug/k_oops_warn_panic/lab_oops_hang_panic/Makefile
@@ -20,7 +20,7 @@ endif
 $(info Building for ARCH ${ARCH}, KERNELRELEASE ${KERNELRELEASE} and CROSS_COMPILE=${CROSS_COMPILE})
 	PWD         := $(shell pwd)
 default:
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
 clean:
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) clean
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
 endif
