--- a/kernel_debug/kprobes_stuff/2_helper_kp/Makefile
+++ b/kernel_debug/kprobes_stuff/2_helper_kp/Makefile
@@ -14,9 +14,9 @@ else
 	KDIR        := /lib/modules/$(shell uname -r)/build
 	PWD         := $(shell pwd)
 default:
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
 endif
 
 clean:
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) clean
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
 
