--- a/kernel_debug/to_debug_assgn/netdrv_buggy/netdriver/Makefile
+++ b/kernel_debug/to_debug_assgn/netdrv_buggy/netdriver/Makefile
@@ -17,7 +17,7 @@ build:
 install: 
 	$(MAKE) -C $(KDIR) M=$(PWD) modules_install 
 clean: 
-	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) clean
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
 else 
   $(info Building with ARCH := ${ARCH} and KERNELRELEASE := ${KERNELRELEASE}) 
 #  EXTRA_CFLAGS += -DDEBUG -g -ggdb
