--- a/kernel_debug/k_oops_warn_panic/oops1/Makefile
+++ b/kernel_debug/k_oops_warn_panic/oops1/Makefile
@@ -27,7 +27,7 @@ else
 
 $(info Building with KERNELRELEASE = ${KERNELRELEASE}) 
 EXTRA_CFLAGS += -DDEBUG -g
-obj-m := oops1.o  
+obj-m := oops.o  
 
 endif
 
