--- a/kernel_debug/k_oops_warn_panic/oops_simple/Makefile
+++ b/kernel_debug/k_oops_warn_panic/oops_simple/Makefile
@@ -35,7 +35,7 @@ else
 endif
 
 # Set FNAME_C to the kernel module name source filename (without .c)
-FNAME_C := oops2
+FNAME_C := oops_simple
 
 PWD            := $(shell pwd)
 obj-m          += ${FNAME_C}.o
